cmake_minimum_required(VERSION 3.16)

set(CMAKE_GENERATOR "MinGW Makefiles")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


project(FVM LANGUAGES CXX)
set(CMAKE_AUTOMOC ON)   #生成Qt元对象(moc)
set(CMAKE_AUTOUIC OFF)  #不带Ui文件

# set(GENERATE_DEBUG ON)  #Debug
# set(FVM_SOURCE_FILE ${CMAKE_CURRENT_LIST_DIR}/source)

set(INSTALL_PROGRAMME_PATH ${CMAKE_CURRENT_LIST_DIR}/build/debug)
set(BUILD_FMD_DESIGN_TOOL OFF)          # 生成物体设计器
set(BUILD_FIGHTLEVEL_DESIGN_TOOL OFF)   # 生成关卡设计器


# 设置输出目录
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)


find_package(Qt6 REQUIRED COMPONENTS Core Gui Svg Widgets) 

add_subdirectory(src)

